# fluffy-tribble

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  arch.md
.github/: auto_assign.yml
.github/workflows/: action.yml  ci.yml
docs/: arch.md  rfc.md
include/: builtins.hpp  command_executor.hpp  command_id.hpp  command_manager.hpp  command_parser.hpp  execution_context.hpp  external_runner.hpp  lexer.hpp  parsed_command.hpp  pipe_executor.hpp  token.hpp
src/: builtins.cpp  builtins.hpp  command_executor.cpp  command_id.hpp  command_manager.cpp  command_manager.hpp  command_parser.cpp  command_parser.hpp  execution_context.cpp  execution_context.hpp  executor.cpp  executor.hpp  external_runner.cpp  external_runner.hpp  lexer.cpp  main.cpp  parsed_command.hpp  pipe_executor.cpp  pipe_executor.hpp  tokenizer.cpp  tokenizer.hpp
src/builtin_commands/: cat.cpp  echo.cpp  exit.cpp  grep.cpp  pwd.cpp  wc.cpp
tests/: builtins_test.cpp  command_manager_test.cpp  command_parser_test.cpp  execution_context_test.cpp  grep_test.cpp  lexer_test.cpp  pipe_test.cpp  test_builtins.cpp  test_tokenizer.cpp
